Refactor java 9 deprecated code. Also made use of PropertyDescriptors instead of manually looking for getter/setters