@@ -7,9 +7,12 @@ import com.client.core.base.util.Utility;
 import lombok.extern.log4j.Log4j2;
 import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.log4j.Logger;
 import org.joda.time.DateTime;
+import org.springframework.beans.BeanUtils;
 import org.springframework.stereotype.Service;
 
+import java.beans.PropertyDescriptor;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.math.BigDecimal;
@@ -41,29 +44,27 @@ public class StandardEntityChanger implements EntityChanger {
         String finalField = fields[fields.length - 1];
         Object target = Arrays.stream(fields, 0, fields.length - 1).reduce(entity, (entityOrField, nextField) -> {
             try {
-                Method getter = entityOrField.getClass().getDeclaredMethod(getterMethodName(nextField));
-                Class<?> fieldType = getter.getReturnType();
-                Method setter = entityOrField.getClass().getDeclaredMethod(setterMethodName(nextField), fieldType);
-                Object maybeValue = getter.invoke(entityOrField);
+                PropertyDescriptor propertyDescriptor = BeanUtils.getPropertyDescriptor(entityOrField.getClass(), nextField);
+                Class<?> fieldType = propertyDescriptor.getPropertyType();
+                Object maybeValue = propertyDescriptor.getReadMethod().invoke(entityOrField);
                 if (maybeValue == null) {
-                    setter.invoke(entityOrField, fieldType.newInstance());
+                    propertyDescriptor.getWriteMethod().invoke(entityOrField, fieldType.getDeclaredConstructor().newInstance());
                 }
-                return (T) getter.invoke(entityOrField);
+                return (T) propertyDescriptor.getReadMethod().invoke(entityOrField);
             } catch (IllegalAccessException | InvocationTargetException | NoSuchMethodException |
                      InstantiationException e) {
                 throw new RuntimeException(e);
             }
         }, (entity1, entity2) -> entity1);
         try {
-            Method getter = target.getClass().getDeclaredMethod(getterMethodName(finalField));
-            Class<?> fieldType = getter.getReturnType();
-            Method setter = target.getClass().getDeclaredMethod(setterMethodName(finalField), fieldType);
+            PropertyDescriptor propertyDescriptor = BeanUtils.getPropertyDescriptor(target.getClass(), finalField);
+            Class<?> fieldType = propertyDescriptor.getPropertyType();
             if (value instanceof Map) {
-                if (getter.invoke(target) == null) {
-                    setter.invoke(target, fieldType.newInstance());
+                if (propertyDescriptor.getReadMethod().invoke(target) == null) {
+                    propertyDescriptor.getWriteMethod().invoke(target, fieldType.getDeclaredConstructor().newInstance());
                 }
 
-                T nestedTarget = (T) getter.invoke(target);
+                T nestedTarget = (T) propertyDescriptor.getReadMethod().invoke(target);
                 ((Map<String, ?>) value).forEach((key, mapVal) -> {
                     try {
                         setField(nestedTarget, key, mapVal);
@@ -73,20 +74,20 @@ public class StandardEntityChanger implements EntityChanger {
                 });
             } else {
                 try {
-                    setter.invoke(target, value);
+                    propertyDescriptor.getWriteMethod().invoke(target, value);
                 } catch (IllegalAccessException | InvocationTargetException | IllegalArgumentException e) {
                     if (DateTime.class.equals(fieldType)) {
-                        setter.invoke(target, asType(value, DateTime.class));
+                        propertyDescriptor.getWriteMethod().invoke(target, asType(value, DateTime.class));
                     } else if (BullhornEntity.class.isAssignableFrom(fieldType)) {
-                        BullhornEntity bullhornEntity = (BullhornEntity) fieldType.newInstance();
+                        BullhornEntity bullhornEntity = (BullhornEntity) fieldType.getDeclaredConstructor().newInstance();
                         bullhornEntity.setId((Integer) value);
-                        setter.invoke(target, bullhornEntity);
+                        propertyDescriptor.getWriteMethod().invoke(target, bullhornEntity);
                     } else if (Integer.class.equals(fieldType)) {
-                        setter.invoke(target, asType(value, Integer.class));
+                        propertyDescriptor.getWriteMethod().invoke(target, asType(value, Integer.class));
                     } else if (BigDecimal.class.equals(fieldType)) {
-                        setter.invoke(target, asType(value, BigDecimal.class));
+                        propertyDescriptor.getWriteMethod().invoke(target, asType(value, BigDecimal.class));
                     } else if (Boolean.class.equals(fieldType)) {
-                        setter.invoke(target, asType(value, Boolean.class));
+                        propertyDescriptor.getWriteMethod().invoke(target, asType(value, Boolean.class));
                     } else {
                         log.error("Error setting field " + finalField + " to value " + value, e);
                     }
@@ -102,10 +103,11 @@ public class StandardEntityChanger implements EntityChanger {
     private Object getValue(Object entity, String field) {
         return Arrays.stream(field.split("\\.")).reduce(entity, (entityOrField, nextField) -> {
             try {
-                Method getter = entityOrField.getClass().getDeclaredMethod(getterMethodName(nextField));
-                return getter.invoke(ObjectUtils.defaultIfNull(entityOrField, entityOrField.getClass().getDeclaredConstructor().newInstance()));
-            } catch (InvocationTargetException | IllegalAccessException | InstantiationException | NoSuchMethodException e) {
-                log.error("Could not get Field" + nextField + ".", e);
+                PropertyDescriptor propertyDescriptor = BeanUtils.getPropertyDescriptor(entityOrField.getClass(), nextField);
+                return propertyDescriptor.getReadMethod().invoke(ObjectUtils.defaultIfNull(entityOrField, entityOrField.getClass().getDeclaredConstructor().newInstance()));
+            } catch (InvocationTargetException | IllegalAccessException | InstantiationException |
+                     NoSuchMethodException e) {
+                log.error("Could not get Field " + nextField + ".", e);
                 return null;
             }
         }, (entity1, entity2) -> entity1);
@@ -113,10 +115,6 @@ public class StandardEntityChanger implements EntityChanger {
 
     private String getterMethodName(String fieldName) {
         return "get" + StringUtils.capitalize(fieldName);
-    }
-
-    private String setterMethodName(String fieldName) {
-        return "set" + StringUtils.capitalize(fieldName);
     }
 
     private <V> V asType(Object value, Class<V> type) {
